# C-programming

./: CAD.c  CAD.dev  CAD.layout  Makefile.win  Project5.dev  Project5.layout  README.md  Randomize.c  block.h  initialgame - Copy.c  initialgame.c  randMaze.c
Maze/: CMakeLists.txt  README.md  block.c  macro_and_system.h  main.c  menu.c  randomGeneration.c  solution.c  solution.h
Maze/libgraphics/: extgraph.h  gcalloc.h  graphics.c  graphics.h  imgui.c  imgui.h  simpio.h
Project1/: Project1.sln
Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters  block.c  file.c  file.h  macro_and_system.h  main.c  menu.c  menu.h  randomGeneration.c  solution.c  solution.h
Project1/Project1/libgraphics/: imgui.c
Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  block.obj.enc  file.obj.enc  main.obj.enc  menu.obj.enc  randomgeneration.obj.enc  solution.obj.enc  vc143.idb
Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libgraphics/: graphics.c
